add debounce callback to make app more responsive

--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Stock Comparison Tool\n",
     "\n",
-    "Trying to implement something similar to https://www.barchart.com/myBarchart/quotes/SPY/interactive-chart but in Gradio.\n",
+    "Trying to implement something similar to https://www.barchart.com/myBarchart/quotes/SPY/interactive-chart but in ~~Gradio~~ Plotly.\n",
     "\n",
     "The code in the first code block of this notebook is executed when the `app.py` file is run. This notebook is used for the simplicity of interactive development and testing."
    ]
@@ -55,31 +55,31 @@
        "      <th>1980-12-12</th>\n",
        "      <td>0.098834</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-15</th>\n",
        "      <td>0.093678</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-16</th>\n",
        "      <td>0.086802</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-17</th>\n",
        "      <td>0.088951</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-18</th>\n",
        "      <td>0.091530</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -125,11 +125,11 @@
       "text/plain": [
        "Ticker            AAPL       GOOGL        MSFT\n",
        "Date                                          \n",
-       "1980-12-12    0.098834    2.501941    0.059947\n",
-       "1980-12-15    0.093678    2.501941    0.059947\n",
-       "1980-12-16    0.086802    2.501941    0.059947\n",
-       "1980-12-17    0.088951    2.501941    0.059947\n",
-       "1980-12-18    0.091530    2.501941    0.059947\n",
+       "1980-12-12    0.098834    2.501941    0.059946\n",
+       "1980-12-15    0.093678    2.501941    0.059946\n",
+       "1980-12-16    0.086802    2.501941    0.059946\n",
+       "1980-12-17    0.088951    2.501941    0.059946\n",
+       "1980-12-18    0.091530    2.501941    0.059946\n",
        "...                ...         ...         ...\n",
        "2024-12-27  255.589996  192.759995  430.529999\n",
        "2024-12-30  252.199997  191.240005  424.829987\n",
@@ -147,11 +147,8 @@
    ],
    "source": [
     "import itertools\n",
-    "from datetime import timedelta\n",
     "\n",
-    "import gradio as gr\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import yfinance as yf\n",
@@ -174,118 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f36d2ee4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c3701a34",
-   "metadata": {},
-   "source": [
-    "### Gradio app -- this works but is slow to update"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "6d5edaff-cb53-43f7-a60e-1495e3f3361b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7860\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def plot_asset_prices(period, shift):\n",
-    "    end_date = df.index[-1] - timedelta(days=shift)\n",
-    "    start_date = end_date - timedelta(days=period)\n",
-    "    df_normalized = df[(df.index >= start_date) & (df.index <= end_date)]\n",
-    "    df_normalized = df_normalized / df_normalized.iloc[0] - 1\n",
-    "    df_normalized.reset_index(names=\"Date\", inplace=True)\n",
-    "    return gr.LinePlot(\n",
-    "        value=pd.melt(df_normalized, id_vars=[\"Date\"], var_name=\"Asset\", value_name=\"Price\"),\n",
-    "        x=\"Date\",\n",
-    "        y=\"Price\",\n",
-    "        color=\"Asset\",\n",
-    "        title=\"Normalized Asset Prices\",\n",
-    "        y_title=\"Relative Change\",\n",
-    "        x_label_angle=45,\n",
-    "        # height=600,\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "with gr.Blocks() as demo:\n",
-    "    plot = plot_asset_prices(365, 0)\n",
-    "    with gr.Row():\n",
-    "        period = gr.Radio(\n",
-    "            choices=[\n",
-    "                (\"5y\", 5 * 365),\n",
-    "                (\"3y\", 2 * 365),\n",
-    "                (\"2y\", 2 * 365),\n",
-    "                (\"1y\", 365),\n",
-    "                (\"6mo\", 182),\n",
-    "                (\"1mo\", 30),\n",
-    "                (\"1w\", 7),\n",
-    "            ],\n",
-    "            value=365,\n",
-    "            label=\"Period\",\n",
-    "        )\n",
-    "        shift = gr.Slider(minimum=0, maximum=365, value=0, label=\"End Date\")\n",
-    "    period.change(plot_asset_prices, inputs=[period, shift], outputs=plot)\n",
-    "    shift.change(plot_asset_prices, inputs=[period, shift], outputs=plot)\n",
-    "\n",
-    "demo.launch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5817e06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7aff3f9e",
-   "metadata": {},
-   "source": [
-    "### Plotly app -- a bit better"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "b5ad57ef",
+   "id": "5d3ea548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +183,7 @@
     "        self.setup_app()\n",
     "\n",
     "    def setup_env(self, prices):\n",
-    "        self.prices = prices / prices.loc[prices.index[0]]\n",
+    "        self.prices = prices / prices.iloc[0]\n",
     "        self.timestamps = self.prices.index\n",
     "        self.idx_range = [None, None]\n",
     "        self.fig = self.plot_prices()\n",
@@ -348,8 +235,7 @@
     "            )\n",
     "\n",
     "        # dummy traces to show ticks on the right\n",
-    "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
-    "        for asset in self.prices_normalized.columns:\n",
+    "        for _ in self.prices_normalized.columns:\n",
     "            fig.add_trace(\n",
     "                go.Scatter(\n",
     "                    x=[],\n",
@@ -366,7 +252,7 @@
     "        if all(date_range):\n",
     "            xaxis1_dict[\"range\"] = date_range\n",
     "            xaxis2_dict[\"range\"] = date_range\n",
-    "        yaxis1_dict = dict(type=\"log\", dtick=0.5, showticklabels=False)\n",
+    "        yaxis1_dict = dict(type=\"log\", showticklabels=False)\n",
     "        yaxis2_dict = dict(\n",
     "            title=\"relative price change\", nticks=12, tickformat=\".2f\", ticks=\"outside\"\n",
     "        )\n",
@@ -385,7 +271,7 @@
     "            xaxis2=xaxis2_dict,\n",
     "            yaxis2=yaxis2_dict,\n",
     "            yaxis3=yaxis3_dict,\n",
-    "            uirevision=\"constant-key\",  # prevent resets from the xrange compression\n",
+    "            uirevision=\"constant\",  # prevent resets from the xrange compression\n",
     "            font=dict(family=\"Courier New, Monospace\", size=14, weight=\"bold\"),\n",
     "            legend=dict(\n",
     "                title=dict(text=\"assets: \"),\n",
@@ -410,54 +296,53 @@
     "        )\n",
     "        return idx_range\n",
     "\n",
-    "    def get_x_range(self, relayout_data, current_figure, x_range=[None, None]):\n",
-    "        if relayout_data:\n",
-    "            # Check the main axis first (common when user zooms the top plot)\n",
-    "            if \"xaxis2.range[0]\" in relayout_data:\n",
-    "                x_range = [relayout_data[\"xaxis2.range[0]\"], relayout_data[\"xaxis2.range[1]\"]]\n",
-    "\n",
-    "            # If not found, check for \"xaxis1.range[0]\" (if Plotly is labeling the slider that way)\n",
-    "            elif \"xaxis1.range[0]\" in relayout_data:\n",
-    "                x_range = [relayout_data[\"xaxis1.range[0]\"], relayout_data[\"xaxis1.range[1]\"]]\n",
-    "\n",
-    "            # If still not found, it might be \"xaxis.range[0]\" for the slider\n",
-    "            elif \"xaxis.range[0]\" in relayout_data:\n",
-    "                x_range = [relayout_data[\"xaxis.range[0]\"], relayout_data[\"xaxis.range[1]\"]]\n",
-    "\n",
-    "            # If no recognized keys are present, we try to read from the figure layout\n",
-    "            else:\n",
-    "                layout = current_figure[\"layout\"]\n",
-    "                if layout.get(\"xaxis2\", {}).get(\"range\"):\n",
-    "                    x_range = layout[\"xaxis2\"][\"range\"]\n",
-    "                elif layout.get(\"xaxis1\", {}).get(\"range\"):\n",
-    "                    x_range = layout[\"xaxis1\"][\"range\"]\n",
-    "\n",
-    "        # No relayout_data at all, read from the figure layout\n",
-    "        else:\n",
-    "            layout = current_figure[\"layout\"]\n",
-    "            if layout.get(\"xaxis2\", {}).get(\"range\"):\n",
-    "                x_range = layout[\"xaxis2\"][\"range\"]\n",
-    "            elif layout.get(\"xaxis1\", {}).get(\"range\"):\n",
-    "                x_range = layout[\"xaxis1\"][\"range\"]\n",
-    "\n",
-    "        return x_range\n",
+    "    def get_date_range(self, figure_layout):\n",
+    "        date_range = [None, None]\n",
+    "        # Check xaxis2 first\n",
+    "        if \"xaxis2\" in figure_layout and figure_layout[\"xaxis2\"].get(\"range\"):\n",
+    "            date_range = figure_layout[\"xaxis2\"][\"range\"]\n",
+    "        # If not found, check xaxis1\n",
+    "        elif \"xaxis1\" in figure_layout and figure_layout[\"xaxis1\"].get(\"range\"):\n",
+    "            date_range = figure_layout[\"xaxis1\"][\"range\"]\n",
+    "        return date_range\n",
     "\n",
     "    def setup_app(self):\n",
     "        self.app = Dash(__name__)\n",
+    "\n",
     "        self.app.layout = html.Div(\n",
-    "            [dcc.Graph(id=\"plotly-normalized-asset-prices\", figure=self.fig)]\n",
+    "            [\n",
+    "                dcc.Graph(id=\"plotly-normalized-asset-prices\", figure=self.fig),\n",
+    "                dcc.Store(id=\"debounced-relayout\", data=None),\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        # wait 100ms between the updates, even though o1 insists that it's not a\n",
+    "        # \"true debounce\": https://chatgpt.com/share/677b0a08-712c-800c-8aa9-d4abdfa50f11\n",
+    "        self.app.clientside_callback(\n",
+    "            \"\"\"\n",
+    "            function (relayoutData) {\n",
+    "                return new Promise((resolve) => {\n",
+    "                    setTimeout(function() {\n",
+    "                        resolve('Figure updated.');\n",
+    "                    }, 100);\n",
+    "                });\n",
+    "            }\n",
+    "            \"\"\",\n",
+    "            Output(\"debounced-relayout\", \"data\"),\n",
+    "            Input(\"plotly-normalized-asset-prices\", \"relayoutData\"),\n",
+    "            prevent_initial_call=True,\n",
     "        )\n",
     "\n",
     "        @self.app.callback(\n",
     "            Output(\"plotly-normalized-asset-prices\", \"figure\"),\n",
-    "            Input(\"plotly-normalized-asset-prices\", \"relayoutData\"),\n",
+    "            Input(\"debounced-relayout\", \"data\"),\n",
     "            State(\"plotly-normalized-asset-prices\", \"figure\"),\n",
+    "            prevent_initial_call=True,\n",
     "        )\n",
-    "        def update_plot(relayout_data, current_figure):\n",
-    "            \"\"\"Preserve whichever x-range the user has set by zoom/pan or slider.\"\"\"\n",
-    "            date_range = self.get_x_range(relayout_data, current_figure)\n",
-    "            self.fig = self.plot_prices(date_range)\n",
-    "            return self.fig\n",
+    "        def update_figure_after_delay(relayout_data, current_figure):\n",
+    "            date_range = self.get_date_range(current_figure[\"layout\"])\n",
+    "            fig = self.plot_prices(date_range)\n",
+    "            return fig\n",
     "\n",
     "    def run(self, **kwargs):\n",
     "        self.app.run_server(**kwargs)"
@@ -465,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "862e9cf6",
+   "execution_count": 3,
+   "id": "f553fbe9",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +369,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f92c9137070>"
+       "<IPython.lib.display.IFrame at 0x7f090a435660>"
       ]
      },
      "metadata": {},
@@ -492,30 +377,15 @@
     }
    ],
    "source": [
-    "app = NormalizedAssetPricesApp(df)\n",
-    "app.run(debug=True)"
+    "if __name__ == \"__main__\":\n",
+    "    app = NormalizedAssetPricesApp(df)\n",
+    "    app.run(debug=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99cf861",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "941eb077",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b44a0f2",
+   "id": "9bd3fc0d",
    "metadata": {},
    "outputs": [],
    "source": []
