plot rolling changes in rangeslider

--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7f55ba4f-62c1-499c-b38d-0a026159d146",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "[11107 rows x 3 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [],
@@ -184,6 +184,8 @@
     "\n",
     "    def setup_env(self, prices):\n",
     "        self.prices = prices / prices.iloc[0]\n",
+    "        self.percentage_changes = (self.prices / (self.prices.shift(1) + 1e-7) - 1).fillna(0)\n",
+    "        self.rolling_changes = self.percentage_changes.rolling(window=251, min_periods=1).sum()\n",
     "        self.timestamps = self.prices.index\n",
     "        self.idx_range = [None, None]\n",
     "        self.fig = self.plot_prices()\n",
@@ -212,7 +214,7 @@
     "            fig.add_trace(\n",
     "                go.Scatter(\n",
     "                    x=self.timestamps,\n",
-    "                    y=self.prices[asset],\n",
+    "                    y=self.rolling_changes[asset],\n",
     "                    line=dict(color=next(colors)),\n",
     "                    xaxis=\"x1\",\n",
     "                    yaxis=\"y1\",\n",
@@ -252,7 +254,7 @@
     "        if all(date_range):\n",
     "            xaxis1_dict[\"range\"] = date_range\n",
     "            xaxis2_dict[\"range\"] = date_range\n",
-    "        yaxis1_dict = dict(type=\"log\", showticklabels=False)\n",
+    "        yaxis1_dict = dict(showticklabels=False)\n",
     "        yaxis2_dict = dict(\n",
     "            title=\"relative price change\", nticks=12, tickformat=\".2f\", ticks=\"outside\"\n",
     "        )\n",
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "id": "f553fbe9",
    "metadata": {},
    "outputs": [
@@ -369,7 +371,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f090a435660>"
+       "<IPython.lib.display.IFrame at 0x7f08dd295a20>"
       ]
      },
      "metadata": {},
@@ -385,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd3fc0d",
+   "id": "7f213e92",
    "metadata": {},
    "outputs": [],
    "source": []
