change scale to show percentages

--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7f55ba4f-62c1-499c-b38d-0a026159d146",
    "metadata": {},
    "outputs": [
@@ -55,55 +55,37 @@
        "      <th>1980-12-12</th>\n",
        "      <td>0.098834</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-15</th>\n",
        "      <td>0.093678</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-16</th>\n",
        "      <td>0.086802</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-17</th>\n",
        "      <td>0.088951</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-18</th>\n",
        "      <td>0.091530</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-27</th>\n",
-       "      <td>255.589996</td>\n",
-       "      <td>192.759995</td>\n",
-       "      <td>430.529999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-30</th>\n",
-       "      <td>252.199997</td>\n",
-       "      <td>191.240005</td>\n",
-       "      <td>424.829987</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-31</th>\n",
-       "      <td>250.419998</td>\n",
-       "      <td>189.300003</td>\n",
-       "      <td>421.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-02</th>\n",
@@ -117,30 +99,48 @@
        "      <td>191.789993</td>\n",
        "      <td>423.350006</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-06</th>\n",
+       "      <td>245.000000</td>\n",
+       "      <td>196.869995</td>\n",
+       "      <td>427.850006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-07</th>\n",
+       "      <td>242.210007</td>\n",
+       "      <td>195.490005</td>\n",
+       "      <td>422.369995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-08</th>\n",
+       "      <td>242.699997</td>\n",
+       "      <td>193.949997</td>\n",
+       "      <td>424.559998</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11107 rows × 3 columns</p>\n",
+       "<p>11110 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Ticker            AAPL       GOOGL        MSFT\n",
        "Date                                          \n",
-       "1980-12-12    0.098834    2.501941    0.059946\n",
-       "1980-12-15    0.093678    2.501941    0.059946\n",
-       "1980-12-16    0.086802    2.501941    0.059946\n",
-       "1980-12-17    0.088951    2.501941    0.059946\n",
-       "1980-12-18    0.091530    2.501941    0.059946\n",
+       "1980-12-12    0.098834    2.501941    0.059827\n",
+       "1980-12-15    0.093678    2.501941    0.059827\n",
+       "1980-12-16    0.086802    2.501941    0.059827\n",
+       "1980-12-17    0.088951    2.501941    0.059827\n",
+       "1980-12-18    0.091530    2.501941    0.059827\n",
        "...                ...         ...         ...\n",
-       "2024-12-27  255.589996  192.759995  430.529999\n",
-       "2024-12-30  252.199997  191.240005  424.829987\n",
-       "2024-12-31  250.419998  189.300003  421.500000\n",
        "2025-01-02  243.850006  189.429993  418.579987\n",
        "2025-01-03  243.360001  191.789993  423.350006\n",
+       "2025-01-06  245.000000  196.869995  427.850006\n",
+       "2025-01-07  242.210007  195.490005  422.369995\n",
+       "2025-01-08  242.699997  193.949997  424.559998\n",
        "\n",
-       "[11107 rows x 3 columns]"
+       "[11110 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
     "        date0, date1 = self.timestamps[idx0], self.timestamps[idx1]\n",
     "        price = self.prices.loc[date0]\n",
     "        self.prices_normalized = np.nan * self.prices\n",
-    "        self.prices_normalized.loc[date0:date1] = self.prices[date0:date1] / price - 1\n",
+    "        self.prices_normalized.loc[date0:date1] = 100 * (self.prices[date0:date1] / price - 1)\n",
     "\n",
     "    def plot_prices(self, date_range=[None, None]):\n",
     "        idx_range = self.date_to_idx_range(date_range)\n",
@@ -256,14 +256,19 @@
     "            xaxis2_dict[\"range\"] = date_range\n",
     "        yaxis1_dict = dict(showticklabels=False)\n",
     "        yaxis2_dict = dict(\n",
-    "            title=\"relative price change\", nticks=12, tickformat=\".2f\", ticks=\"outside\"\n",
+    "            title=\"relative price change\",\n",
+    "            nticks=12,\n",
+    "            tickformat=\".0f\",\n",
+    "            ticksuffix=\"%\",\n",
+    "            ticks=\"outside\",\n",
     "        )\n",
     "        yaxis3_dict = dict(\n",
     "            matches=\"y2\",\n",
     "            overlaying=\"y2\",\n",
     "            side=\"right\",\n",
     "            nticks=12,\n",
-    "            tickformat=\".2f\",\n",
+    "            tickformat=\".0f\",\n",
+    "            ticksuffix=\"%\",\n",
     "            ticks=\"outside\",\n",
     "        )\n",
     "\n",
@@ -352,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "id": "f553fbe9",
    "metadata": {},
    "outputs": [
@@ -371,7 +376,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f08dd295a20>"
+       "<IPython.lib.display.IFrame at 0x7f42a7436920>"
       ]
      },
      "metadata": {},
