changed this repo to only compare stock prices

--- a/app.ipynb
+++ b/app.ipynb
@@ -88,12 +88,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-01-02</th>\n",
-       "      <td>243.850006</td>\n",
-       "      <td>189.429993</td>\n",
-       "      <td>418.579987</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2025-01-03</th>\n",
        "      <td>243.360001</td>\n",
        "      <td>191.789993</td>\n",
@@ -117,9 +111,15 @@
        "      <td>193.949997</td>\n",
        "      <td>424.559998</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-10</th>\n",
+       "      <td>236.850006</td>\n",
+       "      <td>192.039993</td>\n",
+       "      <td>418.950012</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11110 rows × 3 columns</p>\n",
+       "<p>11111 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -131,13 +131,13 @@
        "1980-12-17    0.088951    2.501941    0.059827\n",
        "1980-12-18    0.091530    2.501941    0.059827\n",
        "...                ...         ...         ...\n",
-       "2025-01-02  243.850006  189.429993  418.579987\n",
        "2025-01-03  243.360001  191.789993  423.350006\n",
        "2025-01-06  245.000000  196.869995  427.850006\n",
        "2025-01-07  242.210007  195.490005  422.369995\n",
        "2025-01-08  242.699997  193.949997  424.559998\n",
+       "2025-01-10  236.850006  192.039993  418.950012\n",
        "\n",
-       "[11110 rows x 3 columns]"
+       "[11111 rows x 3 columns]"
       ]
      },
      "execution_count": 1,
@@ -376,7 +376,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f42a7436920>"
+       "<IPython.lib.display.IFrame at 0x7fd3fb712890>"
       ]
      },
      "metadata": {},
