move executable code to the first block

--- a/app.ipynb
+++ b/app.ipynb
@@ -15,134 +15,29 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7f55ba4f-62c1-499c-b38d-0a026159d146",
+   "id": "5d3ea548",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
        "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Ticker</th>\n",
-       "      <th>AAPL</th>\n",
-       "      <th>GOOGL</th>\n",
-       "      <th>MSFT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1980-12-12</th>\n",
-       "      <td>0.098834</td>\n",
-       "      <td>2.501941</td>\n",
-       "      <td>0.059827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-15</th>\n",
-       "      <td>0.093678</td>\n",
-       "      <td>2.501941</td>\n",
-       "      <td>0.059827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-16</th>\n",
-       "      <td>0.086802</td>\n",
-       "      <td>2.501941</td>\n",
-       "      <td>0.059827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-17</th>\n",
-       "      <td>0.088951</td>\n",
-       "      <td>2.501941</td>\n",
-       "      <td>0.059827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1980-12-18</th>\n",
-       "      <td>0.091530</td>\n",
-       "      <td>2.501941</td>\n",
-       "      <td>0.059827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-03</th>\n",
-       "      <td>243.360001</td>\n",
-       "      <td>191.789993</td>\n",
-       "      <td>423.350006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-06</th>\n",
-       "      <td>245.000000</td>\n",
-       "      <td>196.869995</td>\n",
-       "      <td>427.850006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-07</th>\n",
-       "      <td>242.210007</td>\n",
-       "      <td>195.490005</td>\n",
-       "      <td>422.369995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-08</th>\n",
-       "      <td>242.699997</td>\n",
-       "      <td>193.949997</td>\n",
-       "      <td>424.559998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-01-10</th>\n",
-       "      <td>236.850006</td>\n",
-       "      <td>192.039993</td>\n",
-       "      <td>418.950012</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11111 rows × 3 columns</p>\n",
-       "</div>"
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "Ticker            AAPL       GOOGL        MSFT\n",
-       "Date                                          \n",
-       "1980-12-12    0.098834    2.501941    0.059827\n",
-       "1980-12-15    0.093678    2.501941    0.059827\n",
-       "1980-12-16    0.086802    2.501941    0.059827\n",
-       "1980-12-17    0.088951    2.501941    0.059827\n",
-       "1980-12-18    0.091530    2.501941    0.059827\n",
-       "...                ...         ...         ...\n",
-       "2025-01-03  243.360001  191.789993  423.350006\n",
-       "2025-01-06  245.000000  196.869995  427.850006\n",
-       "2025-01-07  242.210007  195.490005  422.369995\n",
-       "2025-01-08  242.699997  193.949997  424.559998\n",
-       "2025-01-10  236.850006  192.039993  418.950012\n",
-       "\n",
-       "[11111 rows x 3 columns]"
+       "<IPython.lib.display.IFrame at 0x7fb5cba4d150>"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -154,28 +49,21 @@
     "import yfinance as yf\n",
     "from dash import Dash, Input, Output, State, dcc, html\n",
     "\n",
-    "# retrieve historical stock prices\n",
-    "tickers = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
-    "df = (\n",
-    "    yf.download(\n",
-    "        tickers,\n",
-    "        interval=\"1d\",\n",
-    "        period=\"max\",\n",
-    "        progress=False,\n",
+    "\n",
+    "def get_historical_prices(tickers):\n",
+    "    df = (\n",
+    "        yf.download(\n",
+    "            tickers,\n",
+    "            interval=\"1d\",\n",
+    "            period=\"max\",\n",
+    "            progress=False,\n",
+    "        )\n",
+    "        .Close.bfill()\n",
+    "        .ffill()\n",
     "    )\n",
-    "    .Close.bfill()\n",
-    "    .ffill()\n",
-    ")\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5d3ea548",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return df\n",
+    "\n",
+    "\n",
     "class NormalizedAssetPricesApp:\n",
     "\n",
     "    def __init__(self, prices):\n",
@@ -352,41 +240,18 @@
     "            return fig\n",
     "\n",
     "    def run(self, **kwargs):\n",
-    "        self.app.run_server(**kwargs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f553fbe9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fd3fb712890>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "        self.app.run_server(**kwargs)\n",
+    "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
+    "\n",
+    "    # retrieve historical stock prices\n",
+    "    tickers = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
+    "    df = get_historical_prices(tickers)\n",
+    "\n",
+    "    # run the app\n",
     "    app = NormalizedAssetPricesApp(df)\n",
-    "    app.run(debug=True)"
+    "    app.run(debug=True)\n"
    ]
   },
   {
