--- a/app.ipynb
+++ b/app.ipynb
@@ -25,7 +25,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            src=\"http://0.0.0.0:7860/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fb5cba4d150>"
+       "<IPython.lib.display.IFrame at 0x7f147ee3d930>"
       ]
      },
      "metadata": {},
@@ -42,6 +42,7 @@
    ],
    "source": [
     "import itertools\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
@@ -251,7 +252,7 @@
     "\n",
     "    # run the app\n",
     "    app = NormalizedAssetPricesApp(df)\n",
-    "    app.run(debug=True)\n"
+    "    app.run(host=\"0.0.0.0\", port=int(os.environ.get(\"PORT\", 7860)), debug=True)"
    ]
   },
   {
