--- a/app.ipynb
+++ b/app.ipynb
@@ -252,6 +252,7 @@
     "\n",
     "    # run the app\n",
     "    app = NormalizedAssetPricesApp(df)\n",
+    "    server = app.app.server\n",
     "    app.run(host=\"0.0.0.0\", port=int(os.environ.get(\"PORT\", 7860)), debug=True)"
    ]
   },
