--- a/app.ipynb
+++ b/app.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Trying to implement something similar to https://www.barchart.com/myBarchart/quotes/SPY/interactive-chart but in ~~Gradio~~ Plotly.\n",
     "\n",
-    "The code in the first code block of this notebook is executed when the `app.py` file is run. This notebook is used for the simplicity of interactive development and testing."
+    "The actual app is run by Gunicorn via the `app.py` script. This notebook is used for interactive development and testing."
    ]
   },
   {
@@ -25,7 +25,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"650\"\n",
-       "            src=\"http://0.0.0.0:7860/\"\n",
+       "            src=\"http://0.0.0.0:8050/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f147ee3d930>"
+       "<IPython.lib.display.IFrame at 0x7f7984343730>"
       ]
      },
      "metadata": {},
@@ -41,219 +41,15 @@
     }
    ],
    "source": [
-    "import itertools\n",
-    "import os\n",
-    "\n",
-    "import numpy as np\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "import yfinance as yf\n",
-    "from dash import Dash, Input, Output, State, dcc, html\n",
-    "\n",
-    "\n",
-    "def get_historical_prices(tickers):\n",
-    "    df = (\n",
-    "        yf.download(\n",
-    "            tickers,\n",
-    "            interval=\"1d\",\n",
-    "            period=\"max\",\n",
-    "            progress=False,\n",
-    "        )\n",
-    "        .Close.bfill()\n",
-    "        .ffill()\n",
-    "    )\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "class NormalizedAssetPricesApp:\n",
-    "\n",
-    "    def __init__(self, prices):\n",
-    "        self.setup_env(prices)\n",
-    "        self.setup_app()\n",
-    "\n",
-    "    def setup_env(self, prices):\n",
-    "        self.prices = prices / prices.iloc[0]\n",
-    "        self.percentage_changes = (self.prices / (self.prices.shift(1) + 1e-7) - 1).fillna(0)\n",
-    "        self.rolling_changes = self.percentage_changes.rolling(window=251, min_periods=1).sum()\n",
-    "        self.timestamps = self.prices.index\n",
-    "        self.idx_range = [None, None]\n",
-    "        self.fig = self.plot_prices()\n",
-    "\n",
-    "    def normalize_prices(self):\n",
-    "        idx0, idx1 = self.idx_range\n",
-    "        date0, date1 = self.timestamps[idx0], self.timestamps[idx1]\n",
-    "        price = self.prices.loc[date0]\n",
-    "        self.prices_normalized = np.nan * self.prices\n",
-    "        self.prices_normalized.loc[date0:date1] = 100 * (self.prices[date0:date1] / price - 1)\n",
-    "\n",
-    "    def plot_prices(self, date_range=[None, None]):\n",
-    "        idx_range = self.date_to_idx_range(date_range)\n",
-    "        # do not update the figure if the range is unchanged\n",
-    "        if idx_range == self.idx_range:\n",
-    "            return self.fig\n",
-    "        else:\n",
-    "            self.idx_range = idx_range\n",
-    "            self.normalize_prices()\n",
-    "\n",
-    "        fig = go.Figure()\n",
-    "\n",
-    "        # rangeslider plot\n",
-    "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
-    "        for asset in self.prices.columns:\n",
-    "            fig.add_trace(\n",
-    "                go.Scatter(\n",
-    "                    x=self.timestamps,\n",
-    "                    y=self.rolling_changes[asset],\n",
-    "                    line=dict(color=next(colors)),\n",
-    "                    xaxis=\"x1\",\n",
-    "                    yaxis=\"y1\",\n",
-    "                    showlegend=False,\n",
-    "                )\n",
-    "            )\n",
-    "\n",
-    "        # main plot\n",
-    "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
-    "        for asset in self.prices_normalized.columns:\n",
-    "            fig.add_trace(\n",
-    "                go.Scatter(\n",
-    "                    x=self.timestamps,\n",
-    "                    y=self.prices_normalized[asset],\n",
-    "                    line=dict(width=3, color=next(colors)),\n",
-    "                    name=asset,\n",
-    "                    xaxis=\"x2\",\n",
-    "                    yaxis=\"y2\",\n",
-    "                )\n",
-    "            )\n",
-    "\n",
-    "        # dummy traces to show ticks on the right\n",
-    "        for _ in self.prices_normalized.columns:\n",
-    "            fig.add_trace(\n",
-    "                go.Scatter(\n",
-    "                    x=[],\n",
-    "                    y=[],\n",
-    "                    xaxis=\"x2\",\n",
-    "                    yaxis=\"y3\",\n",
-    "                    showlegend=False,\n",
-    "                )\n",
-    "            )\n",
-    "\n",
-    "        # configure axes\n",
-    "        xaxis1_dict = dict(rangeslider=dict(visible=True, thickness=0.1), tickangle=-30, nticks=20)\n",
-    "        xaxis2_dict = dict(matches=\"x1\", showticklabels=False)\n",
-    "        if all(date_range):\n",
-    "            xaxis1_dict[\"range\"] = date_range\n",
-    "            xaxis2_dict[\"range\"] = date_range\n",
-    "        yaxis1_dict = dict(showticklabels=False)\n",
-    "        yaxis2_dict = dict(\n",
-    "            title=\"relative price change\",\n",
-    "            nticks=12,\n",
-    "            tickformat=\".0f\",\n",
-    "            ticksuffix=\"%\",\n",
-    "            ticks=\"outside\",\n",
-    "        )\n",
-    "        yaxis3_dict = dict(\n",
-    "            matches=\"y2\",\n",
-    "            overlaying=\"y2\",\n",
-    "            side=\"right\",\n",
-    "            nticks=12,\n",
-    "            tickformat=\".0f\",\n",
-    "            ticksuffix=\"%\",\n",
-    "            ticks=\"outside\",\n",
-    "        )\n",
-    "\n",
-    "        fig.update_layout(\n",
-    "            xaxis1=xaxis1_dict,\n",
-    "            yaxis1=yaxis1_dict,\n",
-    "            xaxis2=xaxis2_dict,\n",
-    "            yaxis2=yaxis2_dict,\n",
-    "            yaxis3=yaxis3_dict,\n",
-    "            uirevision=\"constant\",  # prevent resets from the xrange compression\n",
-    "            font=dict(family=\"Courier New, Monospace\", size=14, weight=\"bold\"),\n",
-    "            legend=dict(\n",
-    "                title=dict(text=\"assets: \"),\n",
-    "                orientation=\"h\",\n",
-    "                x=0.0,\n",
-    "                y=1.0,\n",
-    "                xanchor=\"left\",\n",
-    "                yanchor=\"bottom\",\n",
-    "            ),\n",
-    "            margin=dict(t=50, b=50),\n",
-    "            template=\"plotly\",\n",
-    "            height=600,\n",
-    "        )\n",
-    "\n",
-    "        return fig\n",
-    "\n",
-    "    def date_to_idx_range(self, date_range):\n",
-    "        idx_range = (\n",
-    "            self.timestamps.get_indexer(date_range, method=\"nearest\").tolist()\n",
-    "            if all(date_range)\n",
-    "            else [0, -1]\n",
-    "        )\n",
-    "        return idx_range\n",
-    "\n",
-    "    def get_date_range(self, figure_layout):\n",
-    "        date_range = [None, None]\n",
-    "        # Check xaxis2 first\n",
-    "        if \"xaxis2\" in figure_layout and figure_layout[\"xaxis2\"].get(\"range\"):\n",
-    "            date_range = figure_layout[\"xaxis2\"][\"range\"]\n",
-    "        # If not found, check xaxis1\n",
-    "        elif \"xaxis1\" in figure_layout and figure_layout[\"xaxis1\"].get(\"range\"):\n",
-    "            date_range = figure_layout[\"xaxis1\"][\"range\"]\n",
-    "        return date_range\n",
-    "\n",
-    "    def setup_app(self):\n",
-    "        self.app = Dash(__name__)\n",
-    "\n",
-    "        self.app.layout = html.Div(\n",
-    "            [\n",
-    "                dcc.Graph(id=\"plotly-normalized-asset-prices\", figure=self.fig),\n",
-    "                dcc.Store(id=\"debounced-relayout\", data=None),\n",
-    "            ]\n",
-    "        )\n",
-    "\n",
-    "        # wait 100ms between the updates, even though o1 insists that it's not a\n",
-    "        # \"true debounce\": https://chatgpt.com/share/677b0a08-712c-800c-8aa9-d4abdfa50f11\n",
-    "        self.app.clientside_callback(\n",
-    "            \"\"\"\n",
-    "            function (relayoutData) {\n",
-    "                return new Promise((resolve) => {\n",
-    "                    setTimeout(function() {\n",
-    "                        resolve('Figure updated.');\n",
-    "                    }, 100);\n",
-    "                });\n",
-    "            }\n",
-    "            \"\"\",\n",
-    "            Output(\"debounced-relayout\", \"data\"),\n",
-    "            Input(\"plotly-normalized-asset-prices\", \"relayoutData\"),\n",
-    "            prevent_initial_call=True,\n",
-    "        )\n",
-    "\n",
-    "        @self.app.callback(\n",
-    "            Output(\"plotly-normalized-asset-prices\", \"figure\"),\n",
-    "            Input(\"debounced-relayout\", \"data\"),\n",
-    "            State(\"plotly-normalized-asset-prices\", \"figure\"),\n",
-    "            prevent_initial_call=True,\n",
-    "        )\n",
-    "        def update_figure_after_delay(relayout_data, current_figure):\n",
-    "            date_range = self.get_date_range(current_figure[\"layout\"])\n",
-    "            fig = self.plot_prices(date_range)\n",
-    "            return fig\n",
-    "\n",
-    "    def run(self, **kwargs):\n",
-    "        self.app.run_server(**kwargs)\n",
-    "\n",
-    "\n",
-    "# retrieve historical stock prices\n",
-    "tickers = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
-    "df = get_historical_prices(tickers)\n",
-    "\n",
-    "# run the app\n",
-    "app = NormalizedAssetPricesApp(df)\n",
-    "server = app.app.server\n",
+    "from src.dash_app import NormalizedAssetPricesApp\n",
+    "from src.prices import get_historical_prices\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host=\"0.0.0.0\", port=int(os.environ.get(\"PORT\", 7860)), debug=True)"
+    "    tickers = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
+    "    df = get_historical_prices(tickers)\n",
+    "\n",
+    "    app = NormalizedAssetPricesApp(df)\n",
+    "    app.run(host=\"0.0.0.0\", port=8050, debug=True)"
    ]
   },
   {
