--- a/app.ipynb
+++ b/app.ipynb
@@ -33,11 +33,21 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f7984343730>"
+       "<IPython.lib.display.IFrame at 0x7fc689dd1720>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2024-07-19', '2025-01-17']\n",
+      "['2020-01-19', '2025-01-17']\n",
+      "['1980-12-12', '1984-06-17 08:16:02.1969']\n",
+      "['1980-12-12', '1984-06-17 08:16:02.1969']\n"
+     ]
     }
    ],
    "source": [
@@ -55,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f213e92",
+   "id": "2f0987a0",
    "metadata": {},
    "outputs": [],
    "source": []
