add ticker selection + code refactor

--- a/app.ipynb
+++ b/app.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Stock Comparison Tool\n",
     "\n",
-    "Trying to implement something similar to https://www.barchart.com/myBarchart/quotes/SPY/interactive-chart but in ~~Gradio~~ Plotly.\n",
+    "Trying to implement something similar to https://www.barchart.com/myBarchart/quotes/SPY/interactive-chart but in ~~Gradio~~ Plotly + Dash.\n",
     "\n",
     "The actual app is run by Gunicorn via the `app.py` script. This notebook is used for interactive development and testing."
    ]
@@ -18,6 +18,13 @@
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "plot_prices: date_range=[None, None]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -33,22 +40,40 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5ce8b257b0>"
+       "<IPython.lib.display.IFrame at 0x7f69486ff1c0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "plot_prices: date_range=['1980-12-12', '2025-01-31']\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "plot_prices: date_range=['1991-02-08 09:20', '2025-01-31']\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "plot_prices: date_range=['1991-04-13 08:40', '2025-01-31']\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "plot_prices: date_range=['1991-04-13 08:40', '2009-10-25 01:46:40']\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "plot_prices: date_range=['1998-04-16 20:54:30.1644', '2005-03-24 20:59:54.675']\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "['2004-03-24', '2005-03-24 20:59:54.675']\n",
+      "plot_prices: date_range=['2004-03-24', '2005-03-24 20:59:54.675']\n",
+      "Selected tickers: AAPL, GOOGL, MSFT\n",
+      "['2004-03-24', '2005-03-24 20:59:54.675']\n"
+     ]
     }
    ],
    "source": [
     "from src.dash_app import NormalizedAssetPricesApp\n",
-    "from src.prices import get_historical_prices\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    tickers = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
-    "    df = get_historical_prices(tickers)\n",
-    "\n",
-    "    app = NormalizedAssetPricesApp(df)\n",
+    "    app = NormalizedAssetPricesApp()\n",
     "    app.run(host=\"0.0.0.0\", port=8050, debug=True)"
    ]
   },
