--- a/app.ipynb
+++ b/app.ipynb
@@ -19,13 +19,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "plot_prices: date_range=[None, None]\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "\n",
@@ -40,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f69486ff1c0>"
+       "<IPython.lib.display.IFrame at 0x7fd23f91ee60>"
       ]
      },
      "metadata": {},
@@ -51,21 +44,7 @@
      "output_type": "stream",
      "text": [
       "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "plot_prices: date_range=['1980-12-12', '2025-01-31']\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "plot_prices: date_range=['1991-02-08 09:20', '2025-01-31']\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "plot_prices: date_range=['1991-04-13 08:40', '2025-01-31']\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "plot_prices: date_range=['1991-04-13 08:40', '2009-10-25 01:46:40']\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "plot_prices: date_range=['1998-04-16 20:54:30.1644', '2005-03-24 20:59:54.675']\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "['2004-03-24', '2005-03-24 20:59:54.675']\n",
-      "plot_prices: date_range=['2004-03-24', '2005-03-24 20:59:54.675']\n",
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
-      "['2004-03-24', '2005-03-24 20:59:54.675']\n"
+      "Selected tickers: AAPL, GOOGL, MSFT\n"
      ]
     }
    ],
