set initial time interval

--- a/app.ipynb
+++ b/app.ipynb
@@ -14,10 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -33,7 +40,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fd23f91ee60>"
+       "<IPython.lib.display.IFrame at 0x7f5cbfe720b0>"
       ]
      },
      "metadata": {},
@@ -59,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f0987a0",
+   "id": "46e8e6bc",
    "metadata": {},
    "outputs": [],
    "source": []
