--- a/app.ipynb
+++ b/app.ipynb
@@ -14,17 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d3ea548",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YF.download() has changed argument auto_adjust default to True\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -40,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5cbfe720b0>"
+       "<IPython.lib.display.IFrame at 0x7f9e23a3cf10>"
       ]
      },
      "metadata": {},
@@ -50,7 +43,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected tickers: AAPL, GOOGL, MSFT\n",
       "Selected tickers: AAPL, GOOGL, MSFT\n"
      ]
     }
